--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "sistema-estoque",
   "version": "1.0.0",
-  "description": "Sistema de Estoque para Distribuidora",
+  "description": "Sistema de Estoque com Autenticação",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "sqlite3": "^5.1.0",
-    "pg": "^8.11.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "bcrypt": "^5.1.1",
+    "express-session": "^1.17.3",
+    "compression": "^1.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
