--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sistema-estoque",
   "version": "1.0.0",
-  "description": "Sistema de Estoque com Autenticação",
+  "description": "Sistema de Estoque Completo com Autenticação",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
@@ -11,8 +11,7 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
-    "express-session": "^1.17.3",
-    "compression": "^1.7.4"
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
