--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
