--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
     "express-session": "^1.17.3",
-    "pg": "^8.11.3",
-    "sqlite3": "^5.1.7"
+    "helmet": "^8.1.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
