--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-rate-limit": "^8.1.0",
     "express-session": "^1.17.3",
     "helmet": "^8.1.0",
+    "joi": "^18.0.1",
     "pg": "^8.11.3"
   },
   "devDependencies": {
