--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^10.0.0",
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
